-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 290402) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][devT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO);
		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)
		
  devT = dev-release - development releases leading to the next stable
		       version

-----------------------------------------------------------------------

Last officially released version is -*> v2.0.4 *-

??052002 (v2.1dev8)
	- edi-entries: edi-13, edi-18, edi-21, edi-22
	- added: reverse audio object type; see the ecasound(1) 
		 man page for better documentation
	- added: pyecasound - if python version is 2.2 or higher, 
		 pyeca.py sets custom dlopen flags before importing
	         the actual pyecasound python module; this makes 
		 possible to access ecasound's plugins (ALSA, JACK,
	         libaudiofile) from python ECI apps
	- added: ecasoundrc - 'default-audio-format'; same syntax
 		 as with the -f option; defaults to s16_le,2,44100,i
	- added: edi-18 implemented; engine samplerate is now
		 set automatically - if object sample rates don't
	         match, an error is printed
	- added: edi-21 implemented; a much improved framework 
		 for handling audio position information is now
  		 in place; -kl, -kl2 and -klg are now position 
		 aware - changing chainsetup position also affects
	   	 controller sources
	- added: initial implementation of edi-22
	- added: support for devfs /dev/sound/dsp devices [karmak]
	- added: new debugging system in libecasound; semantics 
	         of -d:xxx debug levels have been modified
	- removed: support for old ALSA driver versions 0.3.x, 
 		   0.4.x and 0.5.x